# sigsvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  post-create.sh
.devcontainer/vscode/: launch.json
.github/: settings.yml
sigsvc/: main.py
sigsvc/auth/: handle.py
sigsvc/auth/flask/json/: __init__.py  provider.py  tag.py
sigsvc/biz/: dto.py  errors.py  log.py  peer.py  sessions_manager.py  webrtc.py
sigsvc/services/: misc.py  sessionsvc.py
sigsvc/services/dto/: sessionsvc.py
tests/: conf.py  pytest.env  requests.txt  test_auth.py  test_foo.py
